2011-05-15  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r86504.
        http://trac.webkit.org/changeset/86504
        https://bugs.webkit.org/show_bug.cgi?id=60853

        "Broke Qt EventSender in editing/selection tests" (Requested
        by mwenge on #webkit).

        * WebCoreSupport/DumpRenderTreeSupportQt.cpp:
        * WebCoreSupport/DumpRenderTreeSupportQt.h:

2011-05-12  Robert Hogan  <robert@webkit.org>

        Reviewed by Benjamin Poulain.

        [Qt] fix http/tests/plugins/plugin-document-has-focus.html
        https://bugs.webkit.org/show_bug.cgi?id=60722

        QWebPage::setView() will display the browser window, so
        implement a private version that does just enough to 
        satisfy EventSender's requirement to install an event
        filter on a page's web view.

        * WebCoreSupport/DumpRenderTreeSupportQt.cpp:
        (DumpRenderTreeSupportQt::setView):
        * WebCoreSupport/DumpRenderTreeSupportQt.h:

2011-05-13  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r86447.
        http://trac.webkit.org/changeset/86447
        https://bugs.webkit.org/show_bug.cgi?id=60809

        "Broke some uses of EventSender object on Qt" (Requested by
        mwenge on #webkit).

        * WebCoreSupport/DumpRenderTreeSupportQt.cpp:
        * WebCoreSupport/DumpRenderTreeSupportQt.h:

2011-05-13  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Prune #includes from FrameView.h (Part 2)
        https://bugs.webkit.org/show_bug.cgi?id=60748

        - Update files that were depending on FrameView.h #including Frame.h or
          Page.h.

        * Api/qgraphicswebview.cpp:
        * WebCoreSupport/ChromeClientQt.cpp:

2011-05-13  Robert Hogan  <robert@webkit.org>

        Reviewed by Benjamin Poulain.

        [Qt] fix http/tests/plugins/plugin-document-has-focus.html
        https://bugs.webkit.org/show_bug.cgi?id=60722
